2013-05-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm,
	  util/pandora_db.pl: Several improvements. Added support for detecting
	  other running instances of the script.

2013-05-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Add a default module_interval.

	* util/pandora_db.pl: Moved data deletion code to a generic function.

2013-04-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Adjusted module counts.

2013-04-24  Sancho Lerena <slerena@artica.es>

        * util/pandora_db.pl: patched the code of tagente_datos purge to have n chunks, 
        and in each chunk run a DELETE of only 1000 records at a time (with a LIMIT), 
        adding a 0,0001 second usleep() there, gives time to MySQL to put other 
        operations between, and locks doesn't appear to be a problem anymore. This
        should solve many problems detected in the past.

2013-04-21  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf, NetBSD/pandora_server.conf: Updated
	default settings as the same as Linux ones.

2013-04-18  Sancho Lerena <slerena@artica.es>

        * util/pandora_db.pl: Added a usleep() inside loops to aliviate
        SQL transactions. This should help to improve performance and
        avoid lockings.

2013-04-18 Miguel de Dios <miguel.dedios@artica.es>

	* lib/PandoraFMS/Core.pm: cleaned source code style.

2013-04-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Update the module interval. Fixes bug
	  #3610666.

2013-04-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Server.pm,
	  bin/pandora_server: Moved server tasks to their own thread. Fixes
	  bug #3609450.

2013-04-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Style fix.

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DataServer.pm: Added support for multiple ip
	  addresses.

2013-04-08 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/tentacle_serverd: Tiny improvement. Changed to use